--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>A-1 Plumbing Quote Request</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Anton&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="form-container">
-    <div class="brand-header">
-      <img src="logo.png" alt="A-1 Logo" />
-      <h1>A-1 AFFORDABLE<br>PLUMBING SERVICES</h1>
-    </div>
+    <h1>Request a Plumbing Quote</h1>
     <form enctype="multipart/form-data" method="POST" action="#">
       <label>Full Name:<input type="text" name="name" required></label>
       <label>Address:<input type="text" name="address" required></label>
