--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="form-container">
     <div class="brand-header vertical">
       <img src="logo.png" alt="A-1 Logo" />
-      <h1>A-1 AFFORDABLE PLUMBING SERVICES</h1>
+      <h1 contenteditable="true">A-1 AFFORDABLE PLUMBING SERVICES</h1>
     </div>
     <h2>Request a Plumbing Quote</h2>
     <form enctype="multipart/form-data" method="POST" action="#">
