--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
       <button type="submit">Submit Request</button>
     </form>
   </div>
-  <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
+<!-- Firebase App (core) -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+
+<!-- Firestore -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+<script>
 
   const firebaseConfig = {
     apiKey: "AIzaSyCZF03KFNUK_TqG5_dU2d0oaR1XuzcES4",
@@ -62,8 +66,8 @@
     measurementId: "G-H8DZKBNENH"
   };
 
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
+firebase.initializeApp(firebaseConfig);
+const db = firebase.firestore();
 
   window.submitQuote = async function (event) {
     event.preventDefault();
