--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 contenteditable="true">A-1 AFFORDABLE PLUMBING SERVICES</h1>
     </div>
     <h2>Request a Plumbing Quote</h2>
-    <form enctype="multipart/form-data" method="POST" action="#">
+<form onsubmit="submitQuote(event)">
       <label>Full Name:<input type="text" name="name" required></label>
       <label>Address:<input type="text" name="address" required></label>
       <label>Phone Number:<input type="tel" name="phone" required></label>
