--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     </div>
     <h2>Request a Plumbing Quote</h2>
 <form onsubmit="submitQuote(event)">
-      <label>Full Name:<input type="text" name="name" required></label>
-      <label>Address:<input type="text" name="address" required></label>
-      <label>Phone Number:<input type="tel" name="phone" required></label>
-      <label>Email Address:<input type="email" name="email" required></label>
+<input type="text" id="name" name="name" required>
+<input type="text" id="address" name="address" required>
+<input type="tel" id="phone" name="phone" required>
+<input type="email" id="email" name="email" required>
+<textarea id="description" name="problem_description" rows="4" required></textarea>
 
       <label>Property Type:
         <select name="property_type" required>
