--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <label><input type="checkbox" name="issue[]" value="Other"> Other</label>
       </fieldset>
 
-      <label>Describe the Problem:<textarea name="problem_description" rows="4" required></textarea></label>
+<label>Describe the Problem:<textarea id="description" name="problem_description" rows="4" required></textarea></label>
       <label>When did the problem start?<input type="text" name="start_date"></label>
       <label>Upload Photos:<input type="file" name="photos" multiple></label>
       <label>Upload Video:<input type="file" name="video"></label>
