--- a/index.html
+++ b/index.html
@@ -1,26 +1,44 @@
-window.submitQuote = async function (event) {
-  event.preventDefault();
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
-  const name = document.querySelector("#name").value;
-  const address = document.querySelector("#address").value;
-  const email = document.querySelector("#email").value;
-  const phone = document.querySelector("#phone").value;
-  const description = document.querySelector("#description").value;
-
-  const quote = {
-    name,
-    address,
-    email,
-    phone,
-    description,
-    submittedAt: new Date()
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCZF03KFNUK_TqG5_dU2d0oaR1XuzcES4",
+    authDomain: "a1apsvc-plumbing-workspace.firebaseapp.com",
+    projectId: "a1apsvc-plumbing-workspace",
+    storageBucket: "a1apsvc-plumbing-workspace.appspot.com",
+    messagingSenderId: "752317638867",
+    appId: "1:752317638867:web:c4af700064698bb7d4d26c",
+    measurementId: "G-H8DZKBNENH"
   };
 
-  try {
-    await db.collection("quotes").add(quote);
-    alert("✅ Quote submitted successfully!");
-  } catch (e) {
-    console.error("Error saving to Firestore:", e);
-    alert("❌ Error submitting quote. See console for details.");
-  }
-};
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+  window.submitQuote = async function (event) {
+    event.preventDefault();
+
+    const name = document.querySelector("#name").value;
+    const address = document.querySelector("#address").value;
+    const email = document.querySelector("#email").value;
+    const phone = document.querySelector("#phone").value;
+    const description = document.querySelector("#description").value;
+
+    const quote = {
+      name,
+      address,
+      email,
+      phone,
+      description,
+      submittedAt: new Date()
+    };
+
+    try {
+      await db.collection("quotes").add(quote);
+      alert("✅ Quote submitted successfully!");
+    } catch (e) {
+      console.error("Error saving to Firestore:", e);
+      alert("❌ Error submitting quote. See console for details.");
+    }
+  };
+</script>
