--- a/index.html
+++ b/index.html
@@ -1,44 +1,70 @@
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>A-1 Quote Request</title>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script>
+      const firebaseConfig = {
+        apiKey: "AIzaSyCZF03KFNUK_TqG5_dU2d0oaR1XuzcES4",
+        authDomain: "a1apsvc-plumbing-workspace.firebaseapp.com",
+        projectId: "a1apsvc-plumbing-workspace",
+        storageBucket: "a1apsvc-plumbing-workspace.appspot.com",
+        messagingSenderId: "752317638867",
+        appId: "1:752317638867:web:c4af700064698bb7d4d26c",
+        measurementId: "G-H8DZKBNENH"
+      };
 
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCZF03KFNUK_TqG5_dU2d0oaR1XuzcES4",
-    authDomain: "a1apsvc-plumbing-workspace.firebaseapp.com",
-    projectId: "a1apsvc-plumbing-workspace",
-    storageBucket: "a1apsvc-plumbing-workspace.appspot.com",
-    messagingSenderId: "752317638867",
-    appId: "1:752317638867:web:c4af700064698bb7d4d26c",
-    measurementId: "G-H8DZKBNENH"
-  };
+      firebase.initializeApp(firebaseConfig);
+      const db = firebase.firestore();
 
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
+      window.submitQuote = async function (event) {
+        event.preventDefault();
+        const name = document.querySelector("#name").value;
+        const address = document.querySelector("#address").value;
+        const email = document.querySelector("#email").value;
+        const phone = document.querySelector("#phone").value;
+        const description = document.querySelector("#description").value;
 
-  window.submitQuote = async function (event) {
-    event.preventDefault();
+        const quote = {
+          name,
+          address,
+          email,
+          phone,
+          description,
+          submittedAt: new Date()
+        };
 
-    const name = document.querySelector("#name").value;
-    const address = document.querySelector("#address").value;
-    const email = document.querySelector("#email").value;
-    const phone = document.querySelector("#phone").value;
-    const description = document.querySelector("#description").value;
+        try {
+          await db.collection("quotes").add(quote);
+          alert("✅ Quote submitted successfully!");
+        } catch (error) {
+          console.error("Error saving to Firestore:", error);
+          alert("❌ Error submitting quote. See console for details.");
+        }
+      };
+    </script>
+  </head>
+  <body>
+    <h1>Request a Plumbing Quote</h1>
+    <form onsubmit="submitQuote(event)">
+      <label for="name">Name:</label><br />
+      <input type="text" id="name" required><br /><br />
 
-    const quote = {
-      name,
-      address,
-      email,
-      phone,
-      description,
-      submittedAt: new Date()
-    };
+      <label for="address">Address:</label><br />
+      <input type="text" id="address" required><br /><br />
 
-    try {
-      await db.collection("quotes").add(quote);
-      alert("✅ Quote submitted successfully!");
-    } catch (e) {
-      console.error("Error saving to Firestore:", e);
-      alert("❌ Error submitting quote. See console for details.");
-    }
-  };
-</script>
+      <label for="email">Email:</label><br />
+      <input type="email" id="email" required><br /><br />
+
+      <label for="phone">Phone:</label><br />
+      <input type="tel" id="phone" required><br /><br />
+
+      <label for="description">Service Description:</label><br />
+      <textarea id="description" rows="4" required></textarea><br /><br />
+
+      <button type="submit">Submit Quote</button>
+    </form>
+  </body>
+</html>
