--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10849700032"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'AW-10849700032');
-</script>
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Request a Plumbing Quote | A-1 Affordable Plumbing Services</title>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10849700032"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-10849700032');
+  </script>
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -75,95 +76,47 @@
     .checkbox-group {
       margin-bottom: 20px;
     }
-
-    /* Mobile responsiveness */
-    @media (max-width: 768px) {
-      body {
-        padding: 20px;
-      }
-      
-      .form-container {
-        padding: 20px;
-      }
-    }
   </style>
 </head>
+
 <body>
   <div class="form-container">
     <h2>Request a Plumbing Quote</h2>
-    <form action="https://formspree.io/f/xdkepwjd" method="POST" enctype="multipart/form-data">
+    <form id="quoteForm">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
 
-      <label>
-        Full Name:
-        <input type="text" name="name" required>
-      </label>
+      <label for="phone">Phone Number:</label>
+      <input type="tel" id="phone" name="phone" required>
 
-      <label>
-        Address:
-        <input type="text" name="address" required>
-      </label>
+      <label for="email">Email Address:</label>
+      <input type="email" id="email" name="_replyto" required>
 
-      <label>
-        Phone Number:
-        <input type="tel" name="phone" required>
-      </label>
+      <label for="address">Service Address:</label>
+      <input type="text" id="address" name="address" required>
 
-      <label>
-        Email Address:
-        <input type="email" name="_replyto" required>
-      </label>
-
-      <label>
-        Property Type:
-        <select name="property_type" required>
-          <option value="">Select</option>
-          <option value="Residential">Residential</option>
-          <option value="Commercial">Commercial</option>
-        </select>
-      </label>
-
-      <label>Type of Issue (check all that apply):</label>
-      <div class="checkbox-group">
-        <label><input type="checkbox" name="issue" value="Leak"> Leak</label>
-        <label><input type="checkbox" name="issue" value="Clog"> Clog</label>
-        <label><input type="checkbox" name="issue" value="Water Heater"> Water Heater</label>
-        <label><input type="checkbox" name="issue" value="Toilet"> Toilet</label>
-        <label><input type="checkbox" name="issue" value="Sewer Line"> Sewer Line</label>
-        <label><input type="checkbox" name="issue" value="Other"> Other</label>
-      </div>
-
-      <label>
-        Describe the Problem:
-        <textarea name="description" rows="4" required></textarea>
-      </label>
-
-      <label>
-        When did the problem start?
-        <input type="text" name="start_time">
-      </label>
-
-      <label>
-        Upload Photos (up to 5):
-        <input type="file" name="photos" accept="image/*" multiple>
-      </label>
-
-      <label>
-        Upload Video (optional):
-        <input type="file" name="video" accept="video/*">
-      </label>
-
-      <label>
-        Access Notes (pets, gates, codes):
-        <textarea name="access_notes" rows="2"></textarea>
-      </label>
-
-      <label>
-        Best time to contact or schedule:
-        <input type="text" name="availability">
-      </label>
+      <label for="details">Job Details:</label>
+      <textarea id="details" name="details" rows="4" required></textarea>
 
       <button type="submit">Submit Request</button>
     </form>
   </div>
+
+  <!-- Google Ads conversion event -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const form = document.getElementById('quoteForm');
+      if (form) {
+        form.addEventListener('submit', function () {
+          gtag('event', 'conversion', {
+            'send_to': 'AW-10849700032/2nYgCNmZqZgZEOmZxZMo',
+            'value': 1.0,
+            'currency': 'USD'
+          });
+        });
+      }
+    });
+  </script>
 </body>
 </html>
+
