--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       color: #333;
     }
 
-    input, select, textarea {
+    input, textarea {
       width: 100%;
       padding: 10px;
       margin-top: 5px;
@@ -51,11 +51,6 @@
       border: 1px solid #ccc;
       border-radius: 8px;
       box-sizing: border-box;
-    }
-
-    input[type="checkbox"] {
-      width: auto;
-      margin-right: 10px;
     }
 
     button {
@@ -72,17 +67,13 @@
     button:hover {
       background-color: #005f99;
     }
-
-    .checkbox-group {
-      margin-bottom: 20px;
-    }
   </style>
 </head>
 
 <body>
   <div class="form-container">
     <h2>Request a Plumbing Quote</h2>
-    <form id="quoteForm" method="POST" action="https://formspree.io/f/your-form-id">
+    <form id="quoteForm">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required />
 
@@ -90,7 +81,7 @@
       <input type="tel" id="phone" name="phone" required />
 
       <label for="email">Email Address:</label>
-      <input type="email" id="email" name="_replyto" required />
+      <input type="email" id="email" name="email" required />
 
       <label for="address">Service Address:</label>
       <input type="text" id="address" name="address" required />
@@ -102,7 +93,7 @@
     </form>
   </div>
 
-  <!-- Google Ads conversion event -->
+  <!-- Google Ads conversion event + Supabase submission -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const form = document.getElementById('quoteForm');
@@ -115,7 +106,30 @@
             'value': 1.0,
             'currency': 'USD',
             'event_callback': function () {
-              form.submit(); // Submit after tag fires
+              // Submit to Supabase after tag fires
+              fetch('https://a1apsvc.supabase.co/functions/v1/submit-quote', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({
+                  name: form.name.value,
+                  phone: form.phone.value,
+                  email: form.email.value,
+                  address: form.address.value,
+                  details: form.details.value
+                })
+              })
+              .then(response => {
+                if (response.ok) {
+                  alert('Quote request submitted successfully!');
+                  form.reset();
+                } else {
+                  alert('Submission failed. Please try again.');
+                }
+              })
+              .catch(error => {
+                console.error('Error:', error);
+                alert('An error occurred. Please try again.');
+              });
             }
           });
         });
