--- a/index.html
+++ b/index.html
@@ -1,140 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Request a Plumbing Quote | A-1 Affordable Plumbing Services</title>
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10849700032"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'AW-10849700032');
-  </script>
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f8fb;
-      padding: 40px;
-      margin: 0;
-    }
-
-    .form-container {
-      background: #ffffff;
-      max-width: 600px;
-      margin: auto;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
-    }
-
-    h2 {
-      text-align: center;
-      color: #0074b7;
-      margin-bottom: 25px;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 12px;
-      color: #333;
-    }
-
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      box-sizing: border-box;
-    }
-
-    button {
-      width: 100%;
-      background-color: #0074b7;
-      color: white;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #005f99;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>A-1 Plumbing Quote Request</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <div class="form-container">
-    <h2>Request a Plumbing Quote</h2>
+  <div class="container">
+    <img src="logo.png" alt="A-1 Plumbing Logo" class="logo">
+    <h1>Request a Plumbing Quote</h1>
+    <p class="tagline">Licensed & insured. Serving Rowlett since 1998. Submit today for a free estimate within 24 hours!</p>
+
     <form id="quoteForm">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required />
+      <fieldset>
+        <legend>Contact Info</legend>
+        <label>Name: <input type="text" name="name" required></label>
+        <label>Phone: <input type="tel" name="phone" required></label>
+        <label>Email: <input type="email" name="email" required></label>
+        <label>Address: <input type="text" name="address"></label>
+      </fieldset>
 
-      <label for="phone">Phone Number:</label>
-      <input type="tel" id="phone" name="phone" required />
-
-      <label for="email">Email Address:</label>
-      <input type="email" id="email" name="email" required />
-
-      <label for="address">Service Address:</label>
-      <input type="text" id="address" name="address" required />
-
-      <label for="details">Job Details:</label>
-      <textarea id="details" name="details" rows="4" required></textarea>
+      <fieldset>
+        <legend>Job Details</legend>
+        <label>Describe the issue: <textarea name="details" required></textarea></label>
+        <label>Upload a photo (optional): <input type="file" name="jobPhoto"></label>
+      </fieldset>
 
       <button type="submit">Submit Request</button>
+      <p id="responseMessage" class="hidden"></p>
     </form>
   </div>
 
-  <!-- Google Ads conversion event + Supabase submission -->
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const form = document.getElementById('quoteForm');
-      if (form) {
-        form.addEventListener('submit', function (e) {
-          e.preventDefault(); // Prevent default submission
-
-          gtag('event', 'conversion', {
-            'send_to': 'AW-10849700032/2nYgCNmZqZgZEOmZxZMo',
-            'value': 1.0,
-            'currency': 'USD',
-            'event_callback': function () {
-              // Submit to Supabase after tag fires
-              fetch('https://a1apsvc.supabase.co/functions/v1/submit-quote', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({
-                  name: form.name.value,
-                  phone: form.phone.value,
-                  email: form.email.value,
-                  address: form.address.value,
-                  details: form.details.value
-                })
-              })
-              .then(response => {
-                if (response.ok) {
-                  alert('Quote request submitted successfully!');
-                  form.reset();
-                } else {
-                  alert('Submission failed. Please try again.');
-                }
-              })
-              .catch(error => {
-                console.error('Error:', error);
-                alert('An error occurred. Please try again.');
-              });
-            }
-          });
-        });
-      }
-    });
-  </script>
+  <script src="submit.js"></script>
 </body>
 </html>
