--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <img src="logo.png" alt="A-1 Plumbing Logo" class="logo">
     <h1>Request a Plumbing Quote</h1>
-    <p class="tagline">Licensed & insured. Serving Rowlett since 1998. Submit today for a free estimate within 24 hours!</p>
+    <p class="tagline">Licensed & insured. Now Serving Collin County with 30 years of experience!</p>
 
     <form id="quoteForm">
       <fieldset>
