Add subheading for plumbing services

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <img src="logo.png" alt="A-1 Plumbing Logo" class="logo">
+    <h2 class="subheading">A-1 Affordable Plumbing Services</h2>
     <h1>Request a Plumbing Quote</h1>
     <p class="tagline">Licensed & insured. Now Serving Collin County with 30 years of experience!</p>
 
