Add property type selection to the form

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
         <label>Phone: <input type="tel" name="phone" required></label>
         <label>Email: <input type="email" name="email" required></label>
         <label>Address: <input type="text" name="address"></label>
+        <label>Property Type:
+          <select name="property_type" required>
+            <option value="">Select one</option>
+            <option value="residential">Residential</option>
+            <option value="commercial">Commercial</option>
+            <option value="multi-family">Multi-Family</option>
+          </select>
+        </label>
       </fieldset>
 
       <fieldset>
