--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>A-1 Plumbing Quote Request</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 
   <!-- Google Tag Manager -->
   <script>
@@ -24,8 +24,8 @@
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-  <div class="container">
-    <img src="logo.png" alt="A-1 Plumbing Logo" class="logo">
+  <div class="form-container">
+    <img src="logo.png" alt="A-1 Plumbing Logo" class="logo" />
     <h2 class="subheading">A-1 Affordable Plumbing Services</h2>
     <h1>Request a Plumbing Quote</h1>
     <p class="tagline">Licensed & insured. Now Serving Collin County with 30 years of experience!</p>
@@ -33,10 +33,10 @@
     <form id="quoteForm">
       <fieldset>
         <legend>Contact Info</legend>
-        <label>Name: <input type="text" name="name" required></label>
-        <label>Phone: <input type="tel" name="phone" required></label>
-        <label>Email: <input type="email" name="email" required></label>
-        <label>Address: <input type="text" name="address"></label>
+        <label>Name: <input type="text" name="name" required /></label>
+        <label>Phone: <input type="tel" name="phone" required /></label>
+        <label>Email: <input type="email" name="email" required /></label>
+        <label>Address: <input type="text" name="address" /></label>
         <label>Property Type:
           <select name="property_type" required>
             <option value="">Select one</option>
@@ -53,8 +53,19 @@
           <textarea name="problem_description" required></textarea>
         </label>
         <label>When did the problem start?
-          <input type="date" name="problem_start_date" required>
+          <input type="date" name="problem_start_date" required />
         </label>
         <label>Upload a photo (optional):
-          <input type="file" name="jobPhoto" accept="image/*">
+          <input type="file" name="jobPhoto" accept="image/*" />
         </label>
+      </fieldset>
+
+      <button type="submit">Submit Request</button>
+      <p id="responseMessage" class="hidden"></p>
+    </form>
+  </div>
+
+  <script src="submit.js"></script>
+</body>
+</html>
+
