--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <img src="logo.png" alt="A-1 Plumbing Logo" class="logo" />
     <h2 class="subheading">A-1 Affordable Plumbing Services</h2>
     <h1>Request a Plumbing Quote</h1>
-    <p class="tagline">Licensed & insured. Now Serving Collin County with 30 years of experience!</p>
+    <p class="tagline">Licensed & Insured. Proudly Serving Collin County with 30+ Years of Experience.</p>
 
     <form id="quoteForm">
   <fieldset>
