--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>A-1 Plumbing Quote Request</title>
+  <title>Request a Plumbing Quote | A-1 Affordable Plumbing Services</title>
+  <meta name="description" content="Request a fast, free plumbing quote from A-1 Affordable Plumbing Services. Licensed & insured Master Plumber serving Collin County, TX. Call or text (469) 900-5194." />
+
   <link rel="stylesheet" href="style.css" />
 
   <!-- Google Tag Manager -->
@@ -16,6 +18,7 @@
   </script>
   <!-- End Google Tag Manager -->
 </head>
+
 <body>
   <!-- Google Tag Manager (noscript) -->
   <noscript>
@@ -25,52 +28,68 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <div class="container">
-    <img src="logo.png" alt="A-1 Plumbing Logo" class="logo" />
+    <img src="logo.png" alt="A-1 Affordable Plumbing Services Logo" class="logo" />
+
     <h2 class="subheading">A-1 Affordable Plumbing Services</h2>
     <h1>Request a Plumbing Quote</h1>
-    <p class="tagline">Licensed & Insured. Proudly Serving Collin County with 30+ Years of Experience.</p>
+
+    <p class="tagline">
+      Licensed & Insured. Proudly Serving Collin County with 30+ Years of Experience.
+    </p>
+
+    <p class="call-now">
+      📞 Call or Text Now: <a href="tel:14699005194">(469) 900-5194</a>
+    </p>
 
     <form id="quoteForm">
-  <fieldset>
-    <legend>Contact Info</legend>
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required />
+      <fieldset>
+        <legend>Contact Information</legend>
 
-    <label for="phone">Phone:</label>
-    <input type="tel" id="phone" name="phone" required />
+        <label for="name">Full Name:</label>
+        <input type="text" id="name" name="name" required />
 
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required />
+        <label for="phone">Phone Number:</label>
+        <input type="tel" id="phone" name="phone" required />
 
-    <label for="address">Address:</label>
-    <input type="text" id="address" name="address" required />
-  </fieldset>
+        <label for="email">Email Address:</label>
+        <input type="email" id="email" name="email" required />
 
-  <fieldset>
-    <legend>Job Details</legend>
-    <label for="property_type">Property Type:</label>
-    <select id="property_type" name="property_type" required>
-      <option value="">Select one</option>
-      <option value="Residential">Residential</option>
-      <option value="Commercial">Commercial</option>
-    </select>
+        <label for="address">Service Address:</label>
+        <input type="text" id="address" name="address" required />
+      </fieldset>
 
-    <label for="problem_description">Describe the issue:</label>
-    <textarea id="problem_description" name="problem_description" required></textarea>
+      <fieldset>
+        <legend>Job Details</legend>
 
-    <label for="problem_start_date">When did the issue start?</label>
-    <input type="date" id="problem_start_date" name="problem_start_date" required />
+        <label for="property_type">Property Type:</label>
+        <select id="property_type" name="property_type" required>
+          <option value="">Select one</option>
+          <option value="Residential">Residential</option>
+          <option value="Commercial">Commercial</option>
+        </select>
 
-    <label for="jobPhoto">Upload a photo (optional):</label>
-    <input type="file" id="jobPhoto" name="jobPhoto" />
-  </fieldset>
+        <label for="problem_description">Describe the Issue:</label>
+        <textarea id="problem_description" name="problem_description" required></textarea>
 
-  <button type="submit">Request Quote</button>
-  <p id="responseMessage" class="hidden"></p>
-</form>
+        <label for="problem_start_date">When Did the Issue Start?</label>
+        <input type="date" id="problem_start_date" name="problem_start_date" />
+
+        <label for="jobPhoto">Upload a Photo (Optional):</label>
+        <input type="file" id="jobPhoto" name="jobPhoto" />
+      </fieldset>
+
+      <div class="trust-signals">
+        ✔ Free Estimates &nbsp; | &nbsp;
+        ✔ Fast Scheduling &nbsp; | &nbsp;
+        ✔ Upfront Pricing
+      </div>
+
+      <button type="submit">Request My Quote</button>
+
+      <p id="responseMessage" class="hidden"></p>
+    </form>
   </div>
 
-  <!-- Script: keep last, right before </body> -->
   <script src="submit-v2.js"></script>
 </body>
 </html>
